<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mobicom.ctrlaltdel.course.NewCourseFragment" >
    	 
    <LinearLayout
    	style="?android:attr/actionBarStyle"
        android:layout_width="match_parent"
       	android:layout_height="45dp"
       	android:contentDescription="@string/imagebutton_cancel" >
            
        <ImageButton
        	android:id="@+id/course_cancel"
            style="?android:attr/actionBarStyle"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:src="@drawable/ic_action_cancel"
            android:contentDescription="@string/imagebutton_cancel" />
            
        <ImageButton
            android:id="@+id/course_accept"
            style="?android:attr/actionBarStyle"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1" 
            android:src="@drawable/ic_action_accept"
            android:contentDescription="@string/imagebutton_accept" />
	</LinearLayout>

    <EditText
    	android:id="@+id/et_course_name"
       	android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:layout_marginStart="40dp"
       	android:layout_marginEnd="10dp"
   	   	android:layout_marginBottom="10dp"
   	   	android:layout_marginTop="10dp"
   	   	android:textSize="32sp"
       	android:hint="@string/coursename" >
    	
        <requestFocus />	
    </EditText>
    
     <EditText
    	android:id="@+id/et_course_location"
       	android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:layout_marginStart="40dp"
       	android:layout_marginEnd="10dp"
   	   	android:layout_marginBottom="10dp"
   	   	android:textSize="24sp" 
       	android:hint="@string/courselocation" >
       	
       	<requestFocus /> 
     </EditText>
     
     <TextView
        android:id="@+id/tv_course_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
   	   	android:layout_marginBottom="10dp"
        android:text="@string/dayofweek"
        android:textSize="24sp" 
        style="?android:attr/spinnerStyle" />
     
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
       	
        <LinearLayout
            android:id="@+id/course_linearLayout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

        	<TextView
            	android:id="@+id/tv_course_from"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
           		android:layout_weight="1"
           		android:layout_marginStart="4dp"
            	android:fontFamily="sans-serif-condensed"
            	android:text="@string/from"
            	android:textSize="20sp" />
        
        	<TextView
            	android:id="@+id/tv_course_to"
           	 	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
           		android:layout_weight="1"
           		android:layout_marginStart="4dp"
            	android:fontFamily="sans-serif-condensed"
            	android:text="@string/to"
            	android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/course_linearLayout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_linearLayout_1"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="40dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_course_start_time"
                style="?android:attr/spinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/starttime"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_course_end_time"
                style="?android:attr/spinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/endtime"
                android:textSize="20sp" />
        </LinearLayout>

        

    </RelativeLayout>

</LinearLayout>
