<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobicom.ctrlaltdel.app.event.NewEventFragment" >
    
    <LinearLayout 
         android:layout_width="match_parent"
    	 android:layout_height="wrap_content"
    	 android:orientation="vertical" >
    	 
        <LinearLayout
            style="?android:attr/actionBarStyle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:contentDescription="@string/imagebutton_cancel" >
            
            <ImageButton
                android:id="@+id/event_cancel"
              	style="?android:attr/actionBarStyle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:src="@drawable/ic_action_cancel"
                android:contentDescription="@string/imagebutton_cancel" />
            
             <ImageButton
                android:id="@+id/event_accept"
                style="?android:attr/actionBarStyle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1" 
                android:src="@drawable/ic_action_accept"
                android:contentDescription="@string/imagebutton_accept" />

        </LinearLayout>
    	 
    	<EditText
        	android:id="@+id/et_event_name"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginBottom="10dp"
        	android:layout_marginStart="40dp"
        	android:layout_marginEnd="10dp"
        	android:layout_marginTop="10dp"
        	android:hint="@string/eventname"
        	android:textSize="32sp" >
       
        	<requestFocus />
    	</EditText>
    
   		<CheckBox
   	    	android:id="@+id/cb_allday"
   	    	android:layout_width="match_parent"
   	    	android:layout_height="wrap_content"
   	    	android:layout_marginBottom="10dp"
   	    	android:layout_marginStart="40dp"
   	    	android:layout_marginEnd="10dp"
   	    	android:text="@string/eventallday"
   	    	android:textSize="22sp" 
   	    	android:fontFamily="sans-serif-condensed" />

   		<RelativeLayout
   	    	android:layout_width="match_parent"
   	    	android:layout_height="wrap_content"
   	    	android:layout_marginEnd="10dp"
   	    	android:layout_marginBottom="10dp" >
        
   	   		<TextView
   	        	android:id="@+id/tv_from"
   	        	android:layout_width="wrap_content"
   	        	android:layout_height="wrap_content"
   	        	android:layout_alignParentTop="true"
   	        	android:layout_marginStart="44dp"
   	        	android:fontFamily="sans-serif-condensed"
   	        	android:text="@string/from"
   	        	android:textSize="20sp" />

   	    	<LinearLayout
   	        	android:layout_width="match_parent"
   	        	android:layout_height="wrap_content"
   	        	android:layout_below="@id/tv_from"
   	        	android:layout_marginBottom="10dp"
   	        	android:layout_marginStart="40dp"
   	        	android:orientation="horizontal" >

   	        	<TextView
   	            	android:id="@+id/tv_start_date"
   	            	style="?android:attr/spinnerStyle"
   	            	android:layout_width="wrap_content"
   	            	android:layout_height="wrap_content"
   	            	android:layout_weight="1"
   	            	android:text="@string/startdate"
   	            	android:textSize="20sp" />

   	        	<TextView
   	            	android:id="@+id/tv_start_time"
   	            	style="?android:attr/spinnerStyle"
   	            	android:layout_width="wrap_content"
   	            	android:layout_height="wrap_content"
   	            	android:layout_weight="1"
   	            	android:text="@string/starttime"
   	            	android:textSize="20sp" />
   	    	</LinearLayout>
   		</RelativeLayout>
   	
   	
   		<RelativeLayout
   	    	android:layout_width="match_parent"
   	    	android:layout_height="wrap_content"
   	    	android:layout_marginEnd="10dp"
   	    	android:layout_marginBottom="10dp" >
        
   	   		<TextView
   	    		android:id="@+id/tv_to"
   	        	android:layout_width="wrap_content"
   	        	android:layout_height="wrap_content"
   	        	android:layout_alignParentTop="true"
   	        	android:layout_marginStart="44dp"
   	        	android:fontFamily="sans-serif-condensed"
   	        	android:text="@string/to"
   	        	android:textSize="20sp" />
   	   
    		<LinearLayout
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:layout_below="@id/tv_to"
       			android:layout_marginBottom="10dp"
        		android:layout_marginStart="40dp"
        		android:orientation="horizontal" >
       
   				<TextView
           			android:id="@+id/tv_end_date"
           			android:layout_width="wrap_content"
           			android:layout_height="wrap_content"
           			android:layout_weight="1"
           			android:text="@string/enddate"
           			android:textSize="20sp" 
           			style="?android:attr/spinnerStyle" />
       
        		<TextView
          			android:id="@+id/tv_end_time"
            		android:layout_width="wrap_content"
           			android:layout_height="wrap_content"
            		android:layout_weight="1"
            		android:text="@string/endtime"
            		android:textSize="20sp"
            		style="?android:attr/spinnerStyle" />
   			</LinearLayout>
    	</RelativeLayout>
   
   		<TextView
   	    	android:id="@+id/tv_timezone"
   	    	style="?android:attr/spinnerStyle"
   	    	android:layout_width="match_parent"
   	    	android:layout_height="wrap_content"
   	    	android:layout_marginBottom="10dp"
   	    	android:layout_marginStart="40dp"
   	    	android:layout_marginEnd="10dp"
   	    	android:text="@string/eventtimezone"
   	    	android:textSize="20sp" />
   	
   	 	<EditText
   	    	android:id="@+id/et_event_location"
   	    	android:layout_width="match_parent"
   	    	android:layout_height="wrap_content"
   	    	android:layout_marginBottom="10dp"
   	    	android:layout_marginStart="40dp"
   	    	android:layout_marginEnd="10dp"
   	    	android:hint="@string/eventlocation"
   	    	android:textSize="24sp" >
        
       	 	<requestFocus />
    	</EditText>
   
   		<EditText
   	    	android:id="@+id/et_event_description"
   	    	android:layout_width="match_parent"
   	    	android:layout_height="wrap_content"
   	    	android:layout_marginBottom="10dp"
   	    	android:layout_marginStart="40dp"
   	    	android:layout_marginEnd="10dp"
   	    	android:hint="@string/eventdescription"
   	    	android:textSize="24sp" >
        
        	<requestFocus />
    	</EditText>		
		
		<RelativeLayout
   	    	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginEnd="10dp" >
        
   	    	<TextView
   	        	android:id="@+id/tv_event_course"
   	        	android:layout_width="wrap_content"
   	        	android:layout_height="wrap_content"
   	        	android:layout_alignParentTop="true"
   	        	android:layout_marginStart="44dp"
   	        	android:fontFamily="sans-serif-condensed"
   	        	android:text="@string/course"
   	        	android:textSize="20sp" />
        
   	        <Spinner
   	            android:id="@+id/spinner_event_saved_courses"
   	            style="?android:attr/spinnerStyle"
   	            android:layout_width="match_parent"
   	            android:layout_height="wrap_content"
   	            android:layout_below="@+id/tv_event_course"
   	            android:layout_marginStart="40dp"
   	            android:textSize="20sp"
   	            android:drawSelectorOnTop="true"
   	            android:prompt="@string/reminder" />

   		</RelativeLayout> 
    
   		<!-- <RelativeLayout
   	   	 	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginBottom="10dp"
        	android:layout_marginEnd="10dp" >
        
   	    	<TextView
   	        	android:id="@+id/tv_repitition"
   	        	android:layout_width="wrap_content"
   	        	android:layout_height="wrap_content"
   	        	android:layout_alignParentTop="true"
   	        	android:layout_marginStart="44dp"
   	        	android:fontFamily="sans-serif-condensed"
   	        	android:text="@string/repitition"
   	        	android:textSize="18sp" />
        
   			<TextView 
   	    		android:id="@+id/tv_event_recurrence"
   	    		style="?android:attr/spinnerStyle"
   	    		android:layout_width="match_parent" 
   	    		android:layout_height="wrap_content"
   	    		android:layout_below="@id/tv_repitition"
   	    		android:layout_marginStart="40dp"
   	    		android:text="@string/eventrecurrence"
   	    		android:textSize="20sp" />
   		</RelativeLayout> -->
   	
   		<!-- <RelativeLayout
   	    	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginEnd="10dp" >
        
   	    	<TextView
   	        	android:id="@+id/tv_reminder"
   	        	android:layout_width="wrap_content"
   	        	android:layout_height="wrap_content"
   	        	android:layout_alignParentTop="true"
   	        	android:layout_marginStart="44dp"
   	        	android:fontFamily="sans-serif-condensed"
   	        	android:text="@string/reminder"
   	        	android:textSize="18sp" />
        
   			<LinearLayout
   	        	android:layout_width="match_parent"
   	        	android:layout_height="wrap_content"
   	        	android:layout_below="@id/tv_reminder"
   	        	android:layout_marginBottom="10dp"
   	        	android:layout_marginStart="40dp"
   	        	android:orientation="horizontal" >

   	        	<Spinner
   	            	android:id="@+id/spinner_minutes"
   	            	style="?android:attr/spinnerStyle"
   	            	android:layout_width="0dp"
   	            	android:layout_height="35dp"
   	            	android:layout_weight="1"
   	            	android:text="@string/startdate"
   	            	android:textSize="18sp"
   	            	android:drawSelectorOnTop="true"
   	            	android:prompt="@string/reminder"
   	            	android:entries="@array/array_spinner_reminder" />

   	        	<TextView
   	            	android:id="@+id/tv_notification"
   	            	style="?android:attr/spinnerStyle"
   	            	android:layout_width="0dp"
   	            	android:layout_height="wrap_content"
   	            	android:layout_weight="1"
   	            	android:text="@string/notification"
   	            	android:textSize="18sp" />
   	    	</LinearLayout>
   		</RelativeLayout> -->
   	</LinearLayout>
   	
</ScrollView>
